--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "main.js",
   "scripts": {
     "start": "electron .",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "package": "electron-packager . \"ChurchTools Facts Reporter\" --platform=\"darwin\" --platform=\"win32\" --ignore=\"\\.gitignore\" --out=\"out/\" --overwrite"
   },
   "author": "Philipp Trenz",
   "license": "MIT",
