--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   "scripts": {
     "start": "electron .",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "package": "electron-packager . \"ChurchTools Facts Reporter\" --platform=\"darwin\" --platform=\"win32\" --ignore=\"\\.gitignore\" --out=\"out/\" --overwrite",
-    "postinstall": "./node_modules/.bin/electron-rebuild"
+    "postinstall": "./node_modules/.bin/electron-rebuild",
+    "package-mac": "electron-packager . \"ChurchTools Facts Reporter\" --overwrite --platform=darwin --arch=x64 --icon=assets/icons/mac/icon.icns --prune=true --out=release-builds",
+    "package-win": "electron-packager . \"ChurchTools Facts Reporter\" --overwrite --asar --platform=win32 --arch=x64 --icon=assets/icons/win/icon.ico --prune=true --out=release-builds --version-string.CompanyName=CE --version-string.FileDescription=CE --version-string.ProductName=\"ChurchTools Facts Reporter\"",
+    "package-linux": "electron-packager . \"ChurchTools Facts Reporter\" --overwrite --asar --platform=linux --arch=x64 --icon=assets/icons/linux/icon_1024x1024.png --prune=true --out=release-builds"
+
   },
   "author": "Philipp Trenz",
   "license": "MIT",
