--- a/package.json
+++ b/package.json
@@ -1,10 +1,21 @@
 {
   "name": "churchtools-facts-reporter",
   "version": "0.1.0",
+  "author": "Philipp Trenz",
   "description": "This app provides an easy way to report facts about events in ChurchTools",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/philipptrenz/ChurchTools-Facts-Reporter.git"
+  },
   "os": [
     "win32",
     "darwin"
+  ],
+  "keywords": [
+    "ChurchTools",
+    "facts",
+    "reporting"
   ],
   "main": "main.js",
   "scripts": {
@@ -14,10 +25,7 @@
     "package-mac": "electron-packager . \"ChurchTools Facts Reporter\" --overwrite --platform=darwin --arch=x64 --icon=assets/icons/mac/icon.icns --prune=true --out=release-builds",
     "package-win": "electron-packager . \"ChurchTools Facts Reporter\" --overwrite --asar --platform=win32 --arch=x64 --icon=assets/icons/win/icon.ico --prune=true --out=release-builds --version-string.CompanyName=CE --version-string.FileDescription=CE --version-string.ProductName=\"ChurchTools Facts Reporter\"",
     "package-linux": "electron-packager . \"ChurchTools Facts Reporter\" --overwrite --asar --platform=linux --arch=x64 --icon=assets/icons/linux/icon_1024x1024.png --prune=true --out=release-builds"
-
   },
-  "author": "Philipp Trenz",
-  "license": "MIT",
   "dependencies": {
     "electron-json-storage": "^4.1.6",
     "jquery": "^3.4.1",
