--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   },
   "os": [
     "win32",
-    "darwin"
+    "darwin",
+    "linux"
   ],
   "keywords": [
     "ChurchTools",
@@ -22,9 +23,9 @@
     "start": "electron .",
     "test": "echo \"Error: no test specified\" && exit 1",
     "postinstall": "./node_modules/.bin/electron-rebuild",
-    "package-mac": "electron-packager . \"ChurchTools Facts Reporter\" --overwrite --platform=darwin --arch=x64 --icon=assets/icons/mac/icon.icns --prune=true --out=release-builds",
-    "package-win": "electron-packager . \"ChurchTools Facts Reporter\" --overwrite --asar --platform=win32 --arch=x64 --icon=assets/icons/win/icon.ico --prune=true --out=release-builds --version-string.CompanyName=CE --version-string.FileDescription=CE --version-string.ProductName=\"ChurchTools Facts Reporter\"",
-    "package-linux": "electron-packager . \"ChurchTools Facts Reporter\" --overwrite --asar --platform=linux --arch=x64 --icon=assets/icons/linux/icon_1024x1024.png --prune=true --out=release-builds"
+    "package-mac": "node scripts/package-mac.js",
+    "package-win": "node scripts/package-win.js",
+    "package-linux": "node scripts/package-linux.js"
   },
   "dependencies": {
     "electron-json-storage": "^4.1.6",
@@ -39,6 +40,7 @@
   },
   "devDependencies": {
     "electron": "^5.0.0",
+    "electron-packager": "^13.1.1",
     "electron-rebuild": "^1.8.4"
   }
 }
