--- a/package.json
+++ b/package.json
@@ -21,9 +21,14 @@
   "build": {
     "appId": "com.philipptrenz.ctfactsreporter",
     "asar": true,
-    "files": [
-
-    ]
+    "files": [],
+    "win": {
+      "target": "portable"
+    },
+    "portable": {
+      "unicode": false,
+      "artifactName": "ChurchToolsFactsReporter.exe"
+    }
   },
   "main": "main.js",
   "scripts": {
@@ -39,13 +44,18 @@
     "keytar": "^4.6.0",
     "materialize-css": "^1.0.0",
     "moment": "^2.24.0",
+    "prebuild-install": "^6.1.2",
     "q": "^1.4.1",
     "restler": "^3.4.0",
     "underscore": "^1.8.3",
-    "winston": "^2.3.1"
+    "winston": "^2.3.1",
+    "y18n": "4.0.1"
   },
   "devDependencies": {
     "electron": "^5.0.0",
     "electron-builder": "^20.40.2"
+  },
+  "resolutions": {
+    "node-abi": "^2.26.0"
   }
 }
