--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "moment": "^2.24.0",
     "prebuild-install": "^6.1.2",
     "q": "^1.4.1",
-    "restler": "^3.4.0",
+    "restler": ">=6.3.2",
     "underscore": "^1.8.3",
     "winston": "^2.3.1",
     "y18n": "4.0.1"
